fixed spacing of header icons and mobile toggle top and new

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -191,7 +191,7 @@ input.search-btn{
 }
 
 .spark-anywhere{
-  padding: 13px 0 0 10%;
+  padding: 13px 0 0 50%;
   cursor: pointer;
 }
 
